wasm: fix wasm sockets when data buffer is less than 3696

The socket message comes in too early so add an additional
postEvent when registering the socket notifier.

Pick-to: 6.8
Fixes: QTBUG-125874
Change-Id: Ie951b7a1b858d12927478e071157780ac4fc320b
Reviewed-by: Lorn Potter <lorn.potter@qt.io>
Reviewed-by: Morten Johan Sørvig <morten.sorvig@qt.io>
Reviewed-by: Mårten Nordheim <marten.nordheim@qt.io>